@@ -126,6 +126,7 @@
                         <string>my_price_currency</string>
                         <string>my_total_price</string>
                         <string>my_translated_simulation_state_title</string>
+                        <string>my_specialise_title</string>
                       </list>
                     </value>
                 </item>
